<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FieldActivity" >

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <Button
            android:id="@+id/taklaus"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/taklaus" />

        <Button
            android:id="@+id/laukaus"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/laukaus" />

        <Button
            android:id="@+id/maali"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/maali" />

        <Button
            android:id="@+id/torjunta"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/torjunta" />
    </TableRow>

    <RelativeLayout
        android:id="@+id/kaukalo"
        android:layout_width="800dp"
        android:layout_height="400dp"
        android:layout_alignLeft="@+id/tableRow3"
        android:layout_centerVertical="true"
        android:background="@drawable/icehockey_field"
        android:orientation="vertical" >
    </RelativeLayout>

    <TextView
        android:id="@+id/era_teksti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/kaukalo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/era_teksti"
        android:textSize="20pt" />

</RelativeLayout>